# driverhub

./: .gitignore  BUILD.gn  CLAUDE.md  Makefile  PLAN.md  README.md
docs/: design.md  fuchsia-env-setup.md  fuchsia-integration.md  gki-coverage-report.txt  gki-update-guide.md  ko-build-packaging.md  product-integration.md  runner-design.md  rust-migration.md  starnix-integration.md  testing-plan.md
fidl/fuchsia.driverhub/: device_fs.fidl  firmware_loader.fidl  rfkill.fidl  symbol_registry.fidl  vfs.fidl
meta/: driverhub-info.json  driverhub-runner.cml  driverhub-tests.cml  driverhub.bind  driverhub.cml  gpio-led.bind  gpio-led.cml
rust/driverhub-core/: Cargo.toml
rust/driverhub-core/include/: driverhub_core.h
rust/driverhub-core/src/: allocator.rs  dependency_sort.rs  dt.rs  elf.rs  ffi.rs  lib.rs  loader.rs  modinfo.rs  symbols.rs
scripts/: fetch-gki-modules.sh  test-bootfs-gpio-qemu.sh  test-composite-qemu.sh  test-gki-module-qemu.sh  test-native-composite-qemu.sh  test-pixel-dt-qemu.sh  test-rfkill-qemu.sh  test-rfkill-service.sh  test-vfs-service.sh
src/: main.cc
src/bus_driver/: bus_driver.cc  bus_driver.h
src/dt/: dt_provider.cc  dt_provider.h
src/fuchsia/: bootfs_gpio_demo.cc  composite_demo.cc  dfv2_dt_demo.cc  driverhub_driver.cc  driverhub_driver.h  gpio_led_driver.cc  gpio_led_driver.h  gpio_service_server.cc  gpio_service_server.h  i2c_service_server.cc  i2c_service_server.h  module_child_node.cc  module_child_node.h  module_enumerator.cc  module_enumerator.h  native_composite_demo.cc  resource_provider.cc  resource_provider.h  rfkill_qemu_demo.cc  service_bridge.cc  service_bridge.h  spi_service_server.cc  spi_service_server.h  usb_service_server.cc  usb_service_server.h  vmo_module_loader.cc  vmo_module_loader.h
src/loader/: dependency_sort.cc  dependency_sort.h  memory_allocator.cc  memory_allocator.h  mmap_allocator.cc  mmap_allocator.h  modinfo_parser.cc  modinfo_parser.h  module_executor.cc  module_executor.h  module_loader.cc  module_loader.h
src/module_node/: module_node.cc  module_node.h
src/runner/: device_fs_server.cc  device_fs_server.h  ko_runner.cc  ko_runner.h  main.cc  process_manager.cc  process_manager.h  symbol_proxy_server.cc  symbol_proxy_server.h  symbol_registry_server.cc  symbol_registry_server.h  trampoline.cc  trampoline.h
src/shim/abi/: platform_abi.cc  rtc_abi.cc  timer_abi.cc
src/shim/include/linux/: android_kabi.h  device.h  err.h  gpio.h  module.h  platform_device.h  rtc.h  timer.h  types.h
src/shim/include/linux/abi/: structs.h
src/shim/include/linux/gpio/: driver.h
src/shim/include/linux/kunit/: test.h
src/shim/kernel/: bug.cc  bug.h  clk.cc  clk.h  device.cc  device.h  firmware.cc  firmware.h  gki_stubs.cc  gki_stubs.h  io.cc  io.h  irq.cc  irq.h  libc_stubs.cc  libc_stubs.h  memory.cc  memory.h  module.cc  module.h  platform.cc  platform.h  print.cc  print.h  rfkill_stubs.cc  sync.cc  sync.h  time.cc  time.h  timer.cc  types.h  workqueue.cc  workqueue.h
src/shim/subsystem/: block.cc  block.h  cfg80211.cc  cfg80211.h  drm.cc  drm.h  fs.cc  fs.h  fs_events.cc  fs_events.h  gpio.cc  gpio.h  i2c.cc  i2c.h  iio.cc  iio.h  input.cc  input.h  kunit.cc  led.cc  led.h  net.cc  net.h  nvmem.cc  nvmem.h  pinctrl.cc  pinctrl.h  power_supply.cc  power_supply.h  pwm.cc  pwm.h  rfkill.cc  rfkill.h  rfkill_server.cc  rfkill_server.h  rtc.cc  scsi.cc  scsi.h  spi.cc  spi.h  (+9 more)
src/symbols/: symbol_registry.cc  symbol_registry.h
tests/: crash_module.c  data_export_module.c  data_import_module.c  dependency_sort_test.cc  dt_rtc_test.cc  export_module.c  gpio_controller_module.c  gpio_test_module.c  import_module.c  loader_test.cc  modinfo_parser_test.cc  rtc_cmos_module.c  rtc_ops_test.cc  symbol_registry_test.cc  test_module.c  touchscreen_composite_module.c
tests/fixtures/: pixel10-test.dtb  pixel10-test.dts
tools/: arm64-qemu-boot-shim-entry.S  arm64-qemu-boot-shim.S  arm64-qemu-boot-shim.c  arm64-qemu-boot-shim.ld  devctl.cc  generate_stubs.py  rfkillctl.cc  symvers_parser.py  test-all-modules.sh
tools/extract-factory/: Cargo.toml
tools/extract-factory/src/: main.rs
