# Copyright 2024 The DriverHub Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bind/bind.gni")
import("//build/components.gni")
import("//build/drivers.gni")

group("driverhub") {
  deps = [
    ":driverhub-component",
    ":driverhub-runner-component",
    ":driverhub-tests",
  ]
}

# Bind rules: match the driverhub bus driver to the platform device.
driver_bind_rules("driverhub-bind") {
  rules = "meta/driverhub.bind"
  deps = [
    "//src/devices/bind/fuchsia.platform",
  ]
}

# Core static library shared between the driver and tests.
source_set("driverhub-core") {
  sources = [
    "src/dt/dt_provider.cc",
    "src/fuchsia/service_bridge.cc",
    "src/fuchsia/service_bridge.h",
    "src/loader/dependency_sort.cc",
    "src/loader/memory_allocator.cc",
    "src/loader/modinfo_parser.cc",
    "src/loader/module_loader.cc",
    "src/module_node/module_node.cc",
    "src/shim/kernel/bug.cc",
    "src/shim/kernel/device.cc",
    "src/shim/kernel/io.cc",
    "src/shim/kernel/irq.cc",
    "src/shim/kernel/memory.cc",
    "src/shim/kernel/module.cc",
    "src/shim/kernel/platform.cc",
    "src/shim/kernel/print.cc",
    "src/shim/kernel/sync.cc",
    "src/shim/kernel/time.cc",
    "src/shim/kernel/timer.cc",
    "src/shim/kernel/workqueue.cc",
    "src/shim/subsystem/cfg80211.cc",
    "src/shim/subsystem/drm.cc",
    "src/shim/subsystem/fs.cc",
    "src/shim/subsystem/gpio.cc",
    "src/shim/subsystem/i2c.cc",
    "src/shim/subsystem/input.cc",
    "src/shim/subsystem/rtc.cc",
    "src/shim/subsystem/spi.cc",
    "src/shim/subsystem/usb.cc",
    "src/symbols/symbol_registry.cc",
  ]

  public_deps = [
    "//sdk/lib/driver/logging/cpp",
    "//src/lib/elfldltl",
    "//zircon/system/ulib/zx",
  ]

  include_dirs = [
    ".",
    "src/shim/include",
  ]
}

# The DFv2 bus driver component.
fuchsia_driver("driverhub-driver") {
  output_name = "driverhub"

  sources = [
    "src/fuchsia/driverhub_driver.cc",
    "src/fuchsia/driverhub_driver.h",
    "src/fuchsia/gpio_service_server.cc",
    "src/fuchsia/gpio_service_server.h",
    "src/fuchsia/module_child_node.cc",
    "src/fuchsia/module_child_node.h",
    "src/fuchsia/module_enumerator.cc",
    "src/fuchsia/module_enumerator.h",
    "src/fuchsia/resource_provider.cc",
    "src/fuchsia/resource_provider.h",
    "src/fuchsia/service_bridge.cc",
    "src/fuchsia/service_bridge.h",
    "src/fuchsia/vmo_module_loader.cc",
    "src/fuchsia/vmo_module_loader.h",
  ]

  deps = [
    ":driverhub-bind",
    ":driverhub-core",
    "//sdk/fidl/fuchsia.driver.framework:fuchsia.driver.framework_cpp",
    "//sdk/fidl/fuchsia.hardware.gpio:fuchsia.hardware.gpio_cpp",
    "//sdk/fidl/fuchsia.hardware.i2c:fuchsia.hardware.i2c_cpp",
    "//sdk/fidl/fuchsia.hardware.platform.device:fuchsia.hardware.platform.device_cpp",
    "//sdk/fidl/fuchsia.hardware.spi:fuchsia.hardware.spi_cpp",
    "//sdk/lib/driver/component/cpp",
    "//sdk/lib/driver/incoming/cpp",
    "//sdk/lib/driver/outgoing/cpp",
    "//sdk/lib/fdio",
    "//src/lib/elfldltl",
  ]

  include_dirs = [
    ".",
    "src/shim/include",
  ]
}

fuchsia_driver_component("driverhub-component") {
  component_name = "driverhub"
  manifest = "meta/driverhub.cml"
  deps = [ ":driverhub-driver" ]
  info = "meta/driverhub-info.json"
}

# ---------------------------------------------------------------------------
# KMI shim shared library — loaded into each .ko module process.
# ---------------------------------------------------------------------------

shared_library("libdriverhub_kmi") {
  output_name = "libdriverhub_kmi"

  # All shim sources from driverhub-core that implement KMI symbols.
  sources = [
    "src/fuchsia/service_bridge.cc",
    "src/fuchsia/service_bridge.h",
    "src/shim/kernel/bug.cc",
    "src/shim/kernel/device.cc",
    "src/shim/kernel/io.cc",
    "src/shim/kernel/irq.cc",
    "src/shim/kernel/memory.cc",
    "src/shim/kernel/module.cc",
    "src/shim/kernel/platform.cc",
    "src/shim/kernel/print.cc",
    "src/shim/kernel/sync.cc",
    "src/shim/kernel/time.cc",
    "src/shim/kernel/timer.cc",
    "src/shim/kernel/workqueue.cc",
    "src/shim/subsystem/cfg80211.cc",
    "src/shim/subsystem/drm.cc",
    "src/shim/subsystem/fs.cc",
    "src/shim/subsystem/gpio.cc",
    "src/shim/subsystem/i2c.cc",
    "src/shim/subsystem/input.cc",
    "src/shim/subsystem/rtc.cc",
    "src/shim/subsystem/spi.cc",
    "src/shim/subsystem/usb.cc",
  ]

  deps = [
    "//sdk/lib/fdio",
    "//zircon/system/ulib/async-loop:async-loop-cpp",
    "//zircon/system/ulib/zx",
  ]

  include_dirs = [
    ".",
    "src/shim/include",
  ]
}

# ---------------------------------------------------------------------------
# DriverHub runner — serves fuchsia.component.runner.ComponentRunner for .ko
# ---------------------------------------------------------------------------

source_set("driverhub-runner-lib") {
  sources = [
    "src/runner/ko_runner.cc",
    "src/runner/ko_runner.h",
    "src/runner/process_manager.cc",
    "src/runner/process_manager.h",
    "src/runner/symbol_proxy_server.cc",
    "src/runner/symbol_proxy_server.h",
    "src/runner/symbol_registry_server.cc",
    "src/runner/symbol_registry_server.h",
  ]

  public_deps = [
    ":driverhub-core",
    "//sdk/fidl/fuchsia.component.runner:fuchsia.component.runner_cpp",
    "//sdk/fidl/fuchsia.driverhub:fuchsia.driverhub_cpp",
    "//sdk/lib/component/outgoing/cpp",
    "//sdk/lib/fdio",
    "//src/lib/elfldltl",
    "//zircon/system/ulib/async-loop:async-loop-cpp",
    "//zircon/system/ulib/zx",
  ]

  include_dirs = [
    ".",
    "src/shim/include",
  ]
}

executable("driverhub_runner") {
  output_name = "driverhub_runner"

  sources = [
    "src/runner/main.cc",
  ]

  deps = [
    ":driverhub-runner-lib",
    "//sdk/lib/component/outgoing/cpp",
    "//zircon/system/ulib/async-loop:async-loop-cpp",
    "//zircon/system/ulib/async-loop:async-loop-default",
  ]

  include_dirs = [
    ".",
    "src/shim/include",
  ]
}

fuchsia_component("driverhub-runner-component") {
  component_name = "driverhub-runner"
  manifest = "meta/driverhub-runner.cml"
  deps = [
    ":driverhub_runner",
    ":libdriverhub_kmi",
  ]
}

# Template for packaging a .ko module as a Fuchsia component.
#
# Usage:
#   ko_module("bmp280") {
#     ko_binary = "path/to/bmp280.ko"
#     manifest = "meta/bmp280.cml"
#   }
template("ko_module") {
  fuchsia_component(target_name) {
    component_name = target_name
    manifest = invoker.manifest
    deps = []
    if (defined(invoker.deps)) {
      deps += invoker.deps
    }
    resources = [
      {
        path = invoker.ko_binary
        dest = "data/modules/" + get_path_info(invoker.ko_binary, "file")
      },
    ]
  }
}

# ---------------------------------------------------------------------------
# Unit tests.
# ---------------------------------------------------------------------------

fuchsia_unittest_package("driverhub-tests") {
  deps = [ ":driverhub-unittests" ]
}

fuchsia_test_component("driverhub-unittests") {
  manifest = "meta/driverhub-tests.cml"
  deps = [ ":driverhub-test-bin" ]
}

executable("driverhub-test-bin") {
  testonly = true
  output_name = "driverhub-tests"

  sources = [
    "tests/dependency_sort_test.cc",
    "tests/loader_test.cc",
    "tests/modinfo_parser_test.cc",
    "tests/symbol_registry_test.cc",
  ]

  deps = [
    ":driverhub-core",
    "//src/lib/fxl/test:gtest_main",
    "//third_party/googletest:gtest",
  ]

  include_dirs = [
    ".",
    "src/shim/include",
  ]
}
